--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -15,4 +15,4 @@ body { padding: 0; margin: 0 }
 #unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
 #custom-loader{}
-#custom-loader.label {position: relative; top: -44px; font-size: 35px; text-align: center; font-family: sans-serif,calibri;}
+.label {position: relative; top: -44px; font-size: 35px; text-align: center; font-family: sans-serif,calibri;}
