--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -15,4 +15,13 @@ body { padding: 0; margin: 0 }
 #unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
 #custom-loader{}
-.label {position: relative; left: 50%; top: 50%; font-size: 35px; text-align: center; font-family: sans-serif,calibri; color: #fff;}
+.label {
+  position: relative; 
+  left: 50%; / Смещаем на 50% влево /
+  top: 50%; 
+  font-size: 35px;
+  text-align: center; 
+  font-family: sans-serif,calibri; 
+  color: #fff;
+  transform: translateX(-50%); / Центрируем по оси x /
+} 
